fix: add overflow auto and margin to my-container for better layout on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,6 +60,10 @@ p{
   font-size: 20px;
 }
 @media only screen and (max-width: 600px) {
+  .my-container{
+    overflow: auto;
+    margin-right: 1rem;
+  }
   body{
     overflow: auto;
   }
